contrib/rbac/k8s-envoy-opa/entroq/cfmap-envoy.yml
# From https://openpolicyagent.org/docs/latest/envoy-authorization/
apiVersion: v1
kind: ConfigMap
metadata:
  name: entroq-envoy-config
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - address:
            socket_address:
              address: 0.0.0.0
              port_value: 37706
          filter_chains:
            - filters:
                - name: envoy.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                    codec_type: auto
                    stat_prefix: ingress_http
                    http2_protocol_options: {}
                    access_log:
                      name: "envoy.access_loggers.file"
                      config:
                        path: /tmp/access.log
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: backend
                          domains:
                            - "*"
                          routes:
                            - match:
                                prefix: "/"
                                grpc: {}
                              route:
                                cluster: entroq_service
      clusters:
        - name: entroq_service
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          http2_protocol_options: {}
          load_assignment:
            cluster_name: service
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          protocol: tcp
                          address: "127.0.0.1"
                          port_value: 37707
                          ipv4_compat: true
    admin:
      access_log_path: "/dev/null"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
